--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ h3.title.main {
     border: 2px solid #73AD21;
     font-weight:600;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
-    
+    box-sizing: content-box;
 
 }
 
@@ -145,3 +145,33 @@ button {
     margin-left: -2.3px;
   }
 
+
+  /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER START*/
+@media screen and (max-width: 980px) {
+    #wrapper {
+      padding-bottom: 0;
+      justify-content: center;
+      position: relative
+    }
+    h1 {
+      width: 100%;
+      text-align: center;
+    }
+  
+    h3 {
+      margin-top: 20px;
+      width: 100%;
+      justify-content: center;
+    }
+  
+    body{
+      font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 575px) {
+
+h3.title.main, h1.title.main { 
+    width: 90%
+    } 
+}   
